<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.uiessentials.MainActivity">

    <TextView
        android:id="@+id/txtScreen"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:background="@android:color/background_light"
        android:gravity="right|center"
        android:paddingRight="4dp"
        android:text="@string/original_text"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHor7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHor7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <Button
        android:id="@+id/btn_oneDevX"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_one_dev_x"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_pow"
        app:layout_constraintLeft_toRightOf="@+id/btn_pow" />

    <Button
        android:id="@+id/btn_pow"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_pow_2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/btn_oneDevX"
        app:layout_constraintTop_toTopOf="@+id/btn_root"
        app:layout_constraintLeft_toRightOf="@+id/btn_root" />

    <Button
        android:id="@+id/btn_root"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_root"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/btn_pow"
        app:layout_constraintTop_toTopOf="@+id/btnPercent"
        app:layout_constraintLeft_toRightOf="@+id/btnPercent" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_prcnt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guidelineHor7"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCE"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/btn_root" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHor6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <Button
        android:id="@+id/btnDevide"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_devision"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDelete"
        app:layout_constraintLeft_toRightOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_delete"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/btnDevide"
        app:layout_constraintTop_toTopOf="@+id/btnC"
        app:layout_constraintLeft_toRightOf="@+id/btnC" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_c"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/btnDelete"
        app:layout_constraintTop_toTopOf="@+id/btnCE"
        app:layout_constraintLeft_toRightOf="@+id/btnCE" />

    <Button
        android:id="@+id/btnCE"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_ce"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guidelineHor6"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHor5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnC"
        app:layout_constraintVertical_bias="0.555" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHor5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_x"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn9"
        app:layout_constraintLeft_toRightOf="@+id/btn9" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/btnMult"
        app:layout_constraintTop_toTopOf="@+id/btn8"
        app:layout_constraintLeft_toRightOf="@+id/btn8" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_8"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7"
        app:layout_constraintRight_toLeftOf="@+id/btn9" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guidelineHor5"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHor4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn8"
        app:layout_constraintVertical_bias="0.666" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHor4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_minus"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn6" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/btn5"
        app:layout_constraintLeft_toRightOf="@+id/btn5"
        app:layout_constraintRight_toLeftOf="@+id/btnMinus" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn4"
        app:layout_constraintLeft_toRightOf="@+id/btn4" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:layout_marginBottom="39dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHor3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHor4"
        app:layout_constraintRight_toLeftOf="@+id/btn5"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/plus"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/btn3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn3" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/btn1"
        app:layout_constraintRight_toLeftOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_3"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/btn2"
        app:layout_constraintRight_toLeftOf="@+id/btnPlus"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHor2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/guidelineHor3" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84"
        tools:layout_editor_absoluteY="435dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_equal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/btnDecPoint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDecPoint" />

    <Button
        android:id="@+id/btnDecPoint"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_dot"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/btn0"
        app:layout_constraintRight_toLeftOf="@+id/btnEqual"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/btnPlusMin"
        app:layout_constraintRight_toLeftOf="@+id/btnDecPoint"
        app:layout_constraintTop_toTopOf="@+id/btnPlusMin" />

    <Button
        android:id="@+id/btnPlusMin"
        android:layout_width="88dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_pl_min"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHor1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/guidelineHor2"
        app:layout_constraintVertical_bias="0.006" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"
        tools:layout_editor_absoluteY="506dp"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>
